[gd_scene load_steps=3 format=3 uid="uid://d03unve4c6mbe"]

[ext_resource type="Script" uid="uid://hfvsfd24vlmd" path="res://systems/scripts/CharacterCreation.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://dnsyknih4gcgc" path="res://systems/assets/audio/menu_music.ogg" id="2_4se57"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchor_right = 1.156
anchor_bottom = 1.217
offset_right = -43.680054
offset_bottom = -102.23999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0860001
anchor_bottom = 1.107
offset_left = 491.0
offset_top = 563.0
offset_right = -542.4961
offset_bottom = -43.817993
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 276.0
offset_top = 20.0
offset_right = -226.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 40
text = "DETECTIVE PROFILE CREATION"
horizontal_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -296.0
offset_right = 600.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="LeftPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxLeft" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 65.0
offset_top = 8.0
offset_right = -65.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelMirror" type="Label" parent="MainContainer/LeftPanel/VBoxLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PREVIEW MIRROR"
horizontal_alignment = 1

[node name="MirrorFrame" type="Panel" parent="MainContainer/LeftPanel/VBoxLeft"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewCharacter" type="ColorRect" parent="MainContainer/LeftPanel/VBoxLeft/MirrorFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = 10.0
offset_right = 22.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.35, 1)

[node name="PreviewInfo" type="Label" parent="MainContainer/LeftPanel/VBoxLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Preview will update in real-time"
horizontal_alignment = 1

[node name="RightPanel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(660, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.5
offset_top = 10.0
offset_right = -26.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MainContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="LabelOptions" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "APPEARANCE OPTIONS"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="HairSection" type="VBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="LabelHair" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "HAIR STYLE"

[node name="HBoxHairStyle" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection"]
layout_mode = 2

[node name="BtnPrevHair" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "◄"

[node name="LabelHairNum" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairStyle"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Style 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnNextHair" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "►"

[node name="LabelHairColor" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection"]
layout_mode = 2
text = "Hair Color"

[node name="HBoxHairColor" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnPrevHairColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "◄"

[node name="ColorPreviewHair" type="ColorRect" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairColor"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
color = Color(0.2, 0.1, 0.05, 1)

[node name="LabelHairColorName" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brown"
vertical_alignment = 1

[node name="BtnNextHairColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/HairSection/HBoxHairColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "►"

[node name="HSeparator2" type="HSeparator" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="BeardSection" type="VBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="LabelBeard" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "BEARD STYLE"

[node name="HBoxBeardStyle" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection"]
layout_mode = 2

[node name="BtnPrevBeard" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "◄"

[node name="LabelBeardNum" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardStyle"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnNextBeard" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "►"

[node name="LabelBeardColor" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection"]
layout_mode = 2
text = "Beard Color"

[node name="HBoxBeardColor" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnPrevBeardColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "◄"

[node name="ColorPreviewBeard" type="ColorRect" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardColor"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
color = Color(0.2, 0.1, 0.05, 1)

[node name="LabelBeardColorName" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brown"
vertical_alignment = 1

[node name="BtnNextBeardColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/BeardSection/HBoxBeardColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "►"

[node name="HSeparator3" type="HSeparator" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="MoustacheSection" type="VBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="LabelMoustache" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "MOUSTACHE STYLE"

[node name="HBoxMoustacheStyle" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection"]
layout_mode = 2

[node name="BtnPrevMoustache" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "◄"

[node name="LabelMoustacheNum" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheStyle"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnNextMoustache" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheStyle"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "►"

[node name="LabelMoustacheColor" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection"]
layout_mode = 2
text = "Moustache Color"

[node name="HBoxMoustacheColor" type="HBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="BtnPrevMoustacheColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "◄"

[node name="ColorPreviewMoustache" type="ColorRect" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheColor"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
color = Color(0.2, 0.1, 0.05, 1)

[node name="LabelMoustacheColorName" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheColor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brown"
vertical_alignment = 1

[node name="BtnNextMoustacheColor" type="Button" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/MoustacheSection/HBoxMoustacheColor"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "►"

[node name="HSeparator4" type="HSeparator" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="CorpulenceSection" type="VBoxContainer" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions"]
layout_mode = 2

[node name="LabelCorpulence" type="Label" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/CorpulenceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "BODY BUILD: Medium (75 kg)"

[node name="SliderCorpulence" type="HSlider" parent="MainContainer/RightPanel/ScrollContainer/VBoxOptions/CorpulenceSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
min_value = -2.0
max_value = 2.0
step = 0.5
tick_count = 9
ticks_on_borders = true

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 508.0
offset_top = -197.0
offset_right = -490.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 0

[node name="IDCardContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.5
offset_top = 5.5
offset_right = 333.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="IDCardPhoto" type="Panel" parent="BottomPanel/IDCardContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="PhotoPreview" type="ColorRect" parent="BottomPanel/IDCardContainer/IDCardPhoto"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.3, 1)

[node name="LabelPhoto" type="Label" parent="BottomPanel/IDCardContainer/IDCardPhoto"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ID PHOTO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IDCardForm" type="VBoxContainer" parent="BottomPanel/IDCardContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="LabelIDCard" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "POLICE DETECTIVE ID CARD"

[node name="HBoxName" type="HBoxContainer" parent="BottomPanel/IDCardContainer/IDCardForm"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxName"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Last Name:"

[node name="InputName" type="LineEdit" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxName"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "SMITH"

[node name="HBoxFirstName" type="HBoxContainer" parent="BottomPanel/IDCardContainer/IDCardForm"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxFirstName"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "First Name:"

[node name="InputFirstName" type="LineEdit" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxFirstName"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "John"

[node name="HBoxAge" type="HBoxContainer" parent="BottomPanel/IDCardContainer/IDCardForm"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxAge"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Age:"

[node name="SpinBoxAge" type="SpinBox" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxAge"]
layout_mode = 2
min_value = 25.0
max_value = 60.0
value = 30.0

[node name="HBoxWeight" type="HBoxContainer" parent="BottomPanel/IDCardContainer/IDCardForm"]
layout_mode = 2

[node name="Label" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxWeight"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Weight:"

[node name="SpinBoxWeight" type="SpinBox" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxWeight"]
layout_mode = 2
min_value = 50.0
max_value = 150.0
value = 75.0

[node name="LabelWeight" type="Label" parent="BottomPanel/IDCardContainer/IDCardForm/HBoxWeight"]
layout_mode = 2
text = "kg"

[node name="ButtonsContainer" type="HBoxContainer" parent="BottomPanel/IDCardContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnCancel" type="Button" parent="BottomPanel/IDCardContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[node name="BtnConfirm" type="Button" parent="BottomPanel/IDCardContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "VALIDATE"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4se57")
autoplay = true
